# typing_filter

./: .gitignore  README.md  pyproject.toml  setup.py
typing_filter/: __init__.py  typing_filter.py
